adding style sheets and updating help files
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@675 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/keyboard/help.html
+++ b/src/keyboard/help.html
@@ -2,12 +2,13 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+		<link rel="stylesheet" type="text/css" href="vmb.css">
 		<title>VMB Keyboard Device Specification</title>
 	</head>
 
 	<BODY>
 		<H1>Keyboard Device Specification</H1>
-		<h2><img src="keyboard.gif" alt="" width="364" height="132" border="0"></h2>
+		<img src="keyboard.gif" alt="" width="364" height="132" border="0">
 		<h2>Memory Layout</h2>
 		<table border=1>
 			<tr>
