--- a/src/ram/help.html
+++ b/src/ram/help.html
@@ -2,12 +2,13 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+		<link rel="stylesheet" type="text/css" href="vmb.css">
 		<title>VMB RAM Device Specification</title>
 	</head>
 
 	<BODY>
 <H1>RAM Device Specification</H1>
-		<h1><img src="ram.gif" alt="" width="314" height="114" border="0"></h1>
+		<img src="ram.gif" alt="" width="314" height="114" border="0">
 		<p>The RAM device offers a variable amount  (configure size from 1 up to 4GByte) of read/write memory at a configurable address.  Upon Power On or Reset,  the whole memory is set to zero.</p>
 		<h2>RAM Configuration</h2>The RAM has the following configurable parameters:<table>
 <tr> <td>host      <td> localhost <td>the host where the bus is located </tr>
