--- a/src/sevensegment/help.html
+++ b/src/sevensegment/help.html
@@ -2,12 +2,14 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+		<link rel="stylesheet" type="text/css" href="vmb.css">
 		<title>VMB Sevensegment Device Specification</title>
 	</head>
 
 	<BODY>
 <H1>Sevensegment Device Specification</H1>
-		<h1><img src="sevensegment.gif" alt="" width="314" height="46" border="0"></h1>
+<img src="sevensegment.gif" alt="" width="314" height="46" border="0">
+<p>
 		The Sevensegment device offers just eight byte of memory. Each byte corespondes to one digit in the display, the most significant byte to the leftmost digit the least significant byte to the right most digit. Esch bit in each byte corresponds to one of the seven segments plus the decimal dot to the right of the digit. Setting the bit to 1 will turn the corresponding bit on, setting the bit to 0 turns the corresponding bit off.
 		<p>The correspondnec of bits to segments is as follows:</p>
 		<table border="1" cellspacing="2" cellpadding="0">
