--- a/src/winvram/help.html
+++ b/src/winvram/help.html
@@ -1,4 +1,8 @@
 <HTML>
+	<head>
+		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+		<link rel="stylesheet" type="text/css" href="vmb.css">
+		<title>VMB Windows Graphics Card and Mouse Device Specification</title>
 <BODY>
 <H1>winvram Device Specification</H1>
 
