--- a/src/button/help.html
+++ b/src/button/help.html
@@ -1,12 +1,13 @@
 <HTML>
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+		<link rel="stylesheet" type="text/css" href="vmb.css">
 		<title>VMB Button Specification</title>
 	</head>
 	<BODY>
 		<H1>Button Specification </H1>
 		<h3>the GUI optins will work only under Win32</h3>
-		<h3><img src="button.gif" alt="" width="89" height="89" border="0"></h3>
+		<img src="button.gif" alt="" width="89" height="89" border="0">
 		<H2>Operation</H2>
 		
 		The program will contact the motherboard at [host:]port and register itself. There is no address associated with a button, just an interrupts.
