--- a/src/mother/help.html
+++ b/src/mother/help.html
@@ -2,12 +2,13 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+		<link rel="stylesheet" type="text/css" href="vmb.css">
 		<title>VMB Motherboard Specification</title>
 	</head>
 
 	<BODY>
 <H1>Motherboard Specification</H1>
-		<h1><img src="mother.gif" alt="" width="305" height="102" border="0"></h1>
+		<img src="mother.gif" alt="" width="305" height="102" border="0">
 		<h2>Operation</h2>
 		The motherboard provides 256 slots, each of which can be used to connect a VMB device to the motherboard. The motherboard implements the Virtual Bus Specification and forwards messages (see <a href="../messages.html">Message Specification</a>) between the devices connected.
 		<p>Once started, the motherboard reads the file default.vmb. From this file it will get the port number where the motherboard opens a server socket. Through this socket it will accept connections from the devices and establishes point-to-point TCP/IP connections with the devices. The devices are expected to send a registrations message as the first message.</p>
