--- a/src/rom/help.html
+++ b/src/rom/help.html
@@ -2,6 +2,7 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+		<link rel="stylesheet" type="text/css" href="vmb.css">
 		<title>VMB ROM Device Specification</title>
 	</head>
 
