--- a/src/sound/help.html
+++ b/src/sound/help.html
@@ -2,12 +2,13 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+		<link rel="stylesheet" type="text/css" href="vmb.css">
 		<title>VMB Disk Device Specification</title>
 	</head>
 
 	<BODY>
 		<H1>Soundcard Device Specification</H1>
-		<h2><img src="sound.gif" alt="" width="150" height="200" border="0"></h2>
+		<img src="sound.gif" alt="" width="150" height="200" border="0">
 		<h2>Memory Layout</h2>
 		<table border=1>
 			<tr>
