--- a/src/timer/help.html
+++ b/src/timer/help.html
@@ -2,13 +2,14 @@
 
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
+		<link rel="stylesheet" type="text/css" href="vmb.css">
 		<title>VMB Timer Device Specification</title>
 	</head>
 
 	<BODY>
 <H1>Timer Device Specification</H1>
 
-<H2><img src="timer.gif" alt="" width="298" height="71" border="0"></H2>
+<img src="timer.gif" alt="" width="298" height="71" border="0">
 		<h2><B><B>Memory Layout</B></B></h2>
 		<table border=1>
 <tr><th>Byte<th>Mode<th>Name<th>Description
