fixed broken link to setup files
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@680 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -22,7 +22,7 @@ links to ready to run binary examples.
 <H2> Latest Version: 2.2.1 </H2>
 Win32 Setup file: 
 <a
-href="http://sourceforge.net/projects/vmb/files/vmb/Version%202.1/setup_vmb_2_1_1.exe/download">
+href="https://sourceforge.net/projects/vmb/files/vmb/Version%202.2/setup_2_2_1.exe/download">
 setup_vmb_2_2_1.exe
 </a>
 
@@ -31,7 +31,7 @@ The German version features a German help file for the MMIXIDE.
 <p>
 Win32 Setup file: 
 <a
-href="http://sourceforge.net/projects/vmb/files/vmb/Version%202.2/setup_vmb_2_2_1_de.exe/download">
+href="https://sourceforge.net/projects/vmb/files/vmb/Version%202.2/setup_2_2_1_de.exe/download">
 setup_vmb_2_2_1_de.exe
 </a>. 
 
