--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -23,7 +23,7 @@ links to ready to run binary examples.
 Win32 Setup file: 
 <a
 href="https://sourceforge.net/projects/vmb/files/vmb/Version%202.2/setup_2_2_1.exe/download">
-setup_vmb_2_2_1.exe
+setup_2_2_1.exe
 </a>
 
 <H2> Latest German Version: 2.2.1 </H2>
@@ -32,7 +32,7 @@ The German version features a German help file for the MMIXIDE.
 Win32 Setup file: 
 <a
 href="https://sourceforge.net/projects/vmb/files/vmb/Version%202.2/setup_2_2_1_de.exe/download">
-setup_vmb_2_2_1_de.exe
+setup_2_2_1_de.exe
 </a>. 
 
 
